--- a/src/noState/Timer.module.css
+++ b/src/noState/Timer.module.css
@@ -2,10 +2,10 @@
   margin: 2rem;
   font-size: 3rem;
   cursor: pointer;
-  width: 50%;
+  width: 70%;
 }
 @media only screen and (min-width: 900px) {
   .Timer {
-    width: 30%;
+    width: 40%;
   }
 }
